# rooben

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
docs/assets/: demo.tape
docs/guides/: ARCHITECTURE.md  CUSTOM-AGENTS.md  HARNESS-ENGINEERING.md
examples/: demo_orchestration.py  hello_api.yaml  job_matcher.yaml  realtime_dashboard.yaml
extensions/: _index.json  protocols.py
mcp-gateway/: Dockerfile  index.js  package.json
scripts/: ensure_schema.py  init.sql  seed-demo.sql
scripts/demo-video/: 01-trim.sh  02-title-card.sh  03-caption-overlay.sh  04-speed-ramp.sh  05-transitions.sh  06-add-music.sh  07-concat.sh  (+4 more)
tests/: conftest.py  helpers.py  test_api_retry.py  test_billing.py  test_checkpoint.py  test_circuit_breaker.py  test_cli.py  test_codebase_index.py  test_context_builder.py  test_docker_compose_smoke.py  test_domain.py  test_example_orchestration.py  test_extension_protocol.py  test_extension_protocols.py  test_heuristics.py  test_integration_artifacts.py  test_integration_provider_ecosystem.py  test_integration_registry.py  test_integrations_api.py  test_job_matcher_orchestration.py  test_live_e2e.py  test_mcp_agent.py  test_mcp_resilience.py  test_observability.py  test_orchestrator.py  test_p11_config.py  test_p15a_identity.py  test_p19_5_hotfixes.py  test_p21_oss_pro.py  test_plan_checker.py  test_plan_judge.py  test_planner.py  test_readme_quickstart.py  test_refinement.py  test_replanning.py  test_scratchpad.py  test_security.py  test_spec.py  test_state.py  test_token_tracking.py  (+3 more)
(+291 files in other folders)
