[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rooben"
version = "0.1.0"
description = "Rooben — Autonomous agent orchestration with verification, budget enforcement, and learning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Blake Aber" },
]
keywords = ["agents", "orchestration", "llm", "automation", "mcp", "verification", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "click>=8.0",
    "structlog>=24.0",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/blakeaber/rooben"
Repository = "https://github.com/blakeaber/rooben"
Issues = "https://github.com/blakeaber/rooben/issues"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0,<1.20"]
openai = ["openai>=1.0"]
bedrock = ["boto3>=1.35"]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "sse-starlette>=2.0", "cryptography>=43.0"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
]
dev = ["rooben[mcp,openai,dashboard,test]", "ruff>=0.8"]

[project.scripts]
rooben = "rooben.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rooben"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
